--- a/inventory.yml
+++ b/inventory.yml
@@ -43,13 +43,6 @@ all:
     # Define: America/Chicago
     timezone: 'UTC'
 
-    # default_boot_drive: This is the default drive used for operating system installation.
-    # Default: sda
-    default_boot_drive: sda
-    # default_data_drive: This is the default drive used for data.
-    # Default: sdb
-    default_data_drive: sdb
-
     # server_ip: ansible controller ip address used to define kickstart server
     # Default: ansible controller ip address
     server_ip: 192.168.1.101
@@ -70,6 +63,16 @@ all:
             vmhost.lan:
               ip: "192.168.1.90"
               mac: "00:50:56:a6:39:bc"
-              boot_drive: sda # TODO: Figure this out
-              data_drive: sdb # TODO: Figure this out
+
+              # This is the drive from which ESXi will boot
+              boot_drive: "mpx.vmhba0:C0:T0:L0"
+
+              # Below are the definitions for the datastores you would like to create.
+              # You must have one or more. You create them with the following syntax:
+              # <DATASTORE_1_NAME>:
+              #   disk: <DISK ON WHICH TO INSTALL DATASTORE>
+              # <DATASTORE_2_NAME>:
+              #   disk: <DISK ON WHICH TO INSTALL DATASTORE>
+                datastore1:
+                  disk: "mpx.vmhba0:C0:T1:L0"
               pxe_type: "bios"
